--- a/requirements.txt
+++ b/requirements.txt
@@ -142,6 +142,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.5
 streamlit==1.38.0
+streamlit_chromadb_connection
 sympy==1.13.3
 tenacity==8.5.0
 threadpoolctl==3.5.0
