--- a/requirements.txt
+++ b/requirements.txt
@@ -139,6 +139,7 @@ pypdf==5.0.0
 PyPika==0.48.9
 pyproject_hooks==1.1.0
 pyreadline3==3.5.4
+pysqlite3-binary
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytils==0.4.1
